--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-.dropdown {
+/* .dropdown {
     width: 600px;
 }
 .boxplot_class {
@@ -14,4 +14,4 @@
 #dropdown-menu {
     float: left;
     width: 50%;
-}
+} */
