--- a/dashboard/assets/css/header.css
+++ b/dashboard/assets/css/header.css
@@ -1,3 +1,88 @@
-body {
-    
+#header {
+    margin: 10px 0;
+    display: flex;
+    /* background-color: #499167; */
+}
+
+/* congfig logo IUH */
+.logo-img-iuh {
+    width: 200px;
+}
+
+/* config logo dsk15 */
+.logo-img-k15ds {
+    width: 100px;
+}
+
+#logo-k15ds {
+    padding-top: 18px;
+}
+
+/* config logo vft */
+#logo-vft {
+    margin-left: 30px;
+}
+
+/* config form log in */
+.form-log-in {
+    display: flex;
+}
+
+/* config dark mode button */
+.theme-switch-wrapper {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
+}
+
+.theme-switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+}
+
+.theme-switch input {
+    display: none;
+}
+
+.slider {
+    background-color: rgb(40,42,54);
+    bottom: 0;
+    cursor: pointer;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    transition: .4s;
+}
+
+.slider:before {
+    background-color: white;
+    bottom: 4px;
+    content: "";
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 26px;
+}
+
+input:checked + .slider {
+    background-color: rgb(32, 237, 9);
+}
+
+input:checked + .slider::before {
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
